docs: gameplay gifs and updated readme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,20 +12,20 @@
       "program": "${workspaceFolder}/Snek.Console/bin/Debug/net7.0/Snek.dll",
       "args": [
         // "--help",
-        "--width",
-        "15",
-        "--height",
-        "15",
-        "--speed",
-        "6",
-        "--increase-speed",
-        "true",
-        "--collision",
-        "Rebound",
-        "--audio",
-        "false",
-        "--debug",
-        "true"
+        // "--width",
+        // "15",
+        // "--height",
+        // "15",
+        // "--speed",
+        // "6",
+        // "--increase-speed",
+        // "true",
+        // "--collision",
+        // "Rebound",
+        // "--audio",
+        // "false",
+        // "--debug",
+        // "true"
       ],
       "cwd": "${workspaceFolder}/Snek.Console/bin/Debug/net7.0/",
       "console": "externalTerminal",
