--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/Snek.Console/bin/Debug/net7.0/Snek.dll",
+      "program": "${workspaceFolder}/Snek.Console/bin/Debug/net10.0/linux-x64/Snek.dll",
       "args": [
         // "--help",
         // "--width",
@@ -27,7 +27,7 @@
         // "--debug",
         // "true"
       ],
-      "cwd": "${workspaceFolder}/Snek.Console/bin/Debug/net7.0/",
+      "cwd": "${workspaceFolder}/Snek.Console/bin/Debug/net10.0/linux-x64/",
       "console": "externalTerminal",
       "stopAtEntry": false
     },
